# Fluxa

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  Fluxa_Docker_Setup.md  Makefile  README.md  docker-compose.yml  docker-entry_point.sh  package-lock.json  package.json  tsconfig.json
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: ci-cd-issue.md
.github/actions/deploy-program/: action.yml
.github/actions/install-anchor/: action.yml
.github/actions/install-solana/: action.yml
.github/actions/monitor-deployment/: action.yml
.github/actions/performance-test/: action.yml
.github/actions/send-notification/: action.yml
.github/workflows/: ci-cd.yml  code-quality.yml  dependency-updates.yml  deploy-mainnet.yml  deploy-testnet.yml  frontend-deploy.yml  monitor.yml  performance-test.yml  provision-infrastructure.yml  release.yml  rollback.yml  security-scan.yml
Front-end-UI/: connection.md  frontend_report.md  package-lock.json  package.json
Front-end-UI/app/: layout.tsx
Front-end-UI/contexts/: WalletContext.tsx
Front-end-UI/hooks/: use-solana-data.ts  use-virtualization.ts
Front-end-UI/lib/: config.ts  errorHandling.ts  errorHandling.tsx  schemas.ts  solana-utils.ts  solanaUtils.ts  solanaUtils.ts.new
Front-end-UI/services/: idl.json  solanaService.ts
docs/Reviews/: IL_Mitigation_Review.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.next/: trace
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_liquidity_from_amounts.rs  fuzz_mul_div.rs  fuzz_q64xq64_arithmetic.rs  fuzz_sqrt_x64.rs  fuzz_tick_to_sqrt.rs
infrastructure/development/: main.tf  variables.tf
patched_crates/bv/: build.rs
programs/amm_core/: Cargo.toml
programs/amm_core/proptest-regressions/property_based_test/: math_property_tests.txt
programs/amm_core/proptest-regressions/unit_test/: math_test.txt  pool_test.txt  tick_bitmap_test.txt  tick_test.txt
programs/amm_core/src/: constants.rs  errors.rs  lib.rs  math.rs  oracle.rs  oracle_utils.rs  pool_state.rs  position.rs  swap_router.rs  tick.rs  tick_bitmap.rs  token_pair.rs
programs/amm_core/src/formal_verification/: math_symbolic_tests.rs  mod.rs
programs/amm_core/src/fuzz/: Cargo.toml
programs/amm_core/src/fuzz/fuzz_targets/: fee_calculation.rs  helper_methods.rs  price_conversion.rs  price_difference.rs  q96_arithmetic.rs  swap_step.rs  tick_price.rs  token_amount.rs
programs/amm_core/src/instructions/: initialize_pool.rs  mint_position.rs  mod.rs  swap_exact_input.rs  update_position.rs
programs/amm_core/src/property_based_test/: math_property_tests.rs  mod.rs
programs/amm_core/src/state/: pool.rs
programs/amm_core/src/unit_test/: initialize_pool_test.rs  math_test.rs  mod.rs  oracle_test.rs  oracle_utils_test.rs  pool_test.rs  position_test.rs  tick_bitmap_test.rs  tick_test.rs  token_pair_test.rs
programs/amm_core/src/utils/: price_range.rs
programs/amm_core/tests/: initialize_pool_integration_test.rs  math_integration_tests.rs
programs/fluxa_core/: Cargo.toml
programs/fluxa_core/benches/: core_arithmetic_bench.rs
programs/fluxa_core/proptest-regressions/math/tests/property_tests/: core_arithmetic_proptest.txt
programs/fluxa_core/src/: error.rs  lib.rs
programs/fluxa_core/src/cu_tests/: core_arithmetic_cu_tests.rs  mod.rs
programs/fluxa_core/src/math/: core_arithmetic.rs  liquidity_math.rs  mod.rs  price_math.rs
programs/fluxa_core/src/math/fixed_point/: core_arithmetic.rs  mod.rs
programs/fluxa_core/src/math/tests/: mod.rs
programs/fluxa_core/src/math/tests/formal_verification/: core_arithmetic_formal_verification.rs  mod.rs
programs/fluxa_core/src/math/tests/property_tests/: core_arithmetic_proptest.rs  mod.rs
programs/fluxa_core/src/math/tests/unit_tests/: core_arithmetic_unit_tests.rs  mod.rs
programs/fluxa_core/src/testing/: cu_tests.rs  mod.rs
programs/fluxa_core/src/utils/: constants.rs  mod.rs  pda.rs  timelock_operation.rs
programs/fluxa_core/src/utils/security_authority/: audit_trail.rs  core_authority.rs  emergency_contacts.rs  mod.rs  multisig_config.rs  utils.rs
programs/fluxa_core/tests/: cu_integration_test.rs
programs/impermanent_loss/: Cargo.toml  lib.rs
programs/order_book/: Cargo.toml
programs/risk_engine/: Cargo.toml
programs/risk_engine/src/: errors.rs  il_analyzer.rs  lib.rs  position_optimizer.rs  volatility_detector.rs
programs/risk_engine/src/unit_test/: mod.rs
programs/src/amm_core/: Cargo.toml  constants.rs  errors.rs  lib.rs  math.rs  oracle.rs  oracle_utils.rs  pool_state.rs  position_manager.rs  swap_router.rs  tick_bitmap.rs
programs/src/amm_core/instructions/: close_position.rs  collect_fees.rs  collect_protocol_fees.rs  create_position.rs  create_token_pair.rs  initialize_pool.rs  mod.rs  modify_position.rs  multi_hop_swap.rs  swap.rs
programs/src/amm_core/utils/: mod.rs
programs/src/impermanent_loss/: Cargo.toml  lib.rs
programs/src/impermanent_loss/adaptive_threshold/: mod.rs  risk_scoring.rs  threshold_config.rs  threshold_manager.rs
programs/src/impermanent_loss/instructions/: calculate_volatility.rs  check_rebalance_condition.rs  execute_rebalance.rs  initialize_il_mitigation.rs  mod.rs  update_price_data.rs
programs/src/impermanent_loss/metrics/: il_metrics_calculator.rs
programs/src/impermanent_loss/position_calculator/: boundary_calculator.rs  il_estimator.rs  il_metrics.rs  mod.rs  position_optimizer.rs  stochastic_model.rs
programs/src/impermanent_loss/rebalance/: rebalance_executor.rs
programs/src/impermanent_loss/volatility_detection/: garch_model.rs  mod.rs  time_weighted.rs  volatility_calculator.rs
programs/src/order_book/: Cargo.toml  lib.rs
programs/src/yield_optimization/: Cargo.toml  lib.rs
programs/yield_optimization/: Cargo.toml
scripts/: deploy.sh  initialize-pool.ts  setup-test-accounts.sh
tests/: initializePool.test.ts  mintPosition.test.ts
tests/unit/: initialize-pool.test.ts  token-pair.test.ts
types/: bn.js.d.ts
(+109 files in other folders)
