[workspace]
members = [
    "programs/src/amm_core",
    "programs/src/impermanent_loss",
    "programs/src/order_book",
    "programs/src/yield_optimization",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1