[workspace]
members = [
    "programs/amm_core",
    "programs/impermanent_loss",
    "programs/order_book",
    "programs/yield_optimization",
    "programs/amm_core/src/fuzz"
]
resolver = "2"

[patch.crates-io]
bv = { path = "patched_crates/bv" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

