[package]
name = "fluxa_core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
arbitrary = { version = "1.3", features = ["derive"] }
ethnum = { version = "1.5.2", features = ["macros", "llvm-intrinsics"] }
honggfuzz = "0.5.57"

[dependencies.fluxa_core]
path = "../programs/fluxa_core/"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_q64x64_arithmetic"
path = "fuzz_targets/fuzz_q64x64_arithmetic.rs"
test = false
doc = false

[[bin]]
name = "fuzz_mul_div"
path = "fuzz_targets/fuzz_mul_div.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sqrt_x64"
path = "fuzz_targets/fuzz_sqrt_x64.rs"
test = false
doc = false

[[bin]]
name = "fuzz_tick_to_sqrt"
path = "fuzz_targets/fuzz_tick_to_sqrt.rs"
test = false
doc = false

[[bin]]
name = "fuzz_liquidity_from_amounts"
path = "fuzz_targets/fuzz_liquidity_from_amounts.rs"
test = false
doc = false