[package]
name = "amm_core"
version = "0.1.0"
description = "AMM Core module with Concentrated Liquidity for Fluxa"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_core"
path = "src/lib.rs"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# kani = ["dep:kani"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
bytemuck = { version = "1.15.0", features = ["derive"] }
# kani = { git = "https://github.com/model-checking/kani", tag = "kani-0.61.0", optional = true }
primitive-types = "0.12.2"

[dev-dependencies]
anchor-client = "0.31.1"
proptest = "1.2.0"
tokio = { version = "1.38.1", features = ["macros", "rt", "rt-multi-thread"] } # Updated tokio for compatibility
# kani-verifier = "0.61.0"
solana-program-test = "2.2.7"
solana-sdk = "2.2.2"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] } 
