[package]
name = "fluxa_risk_engine"
version = "0.1.0"
description = "Fluxa Risk Engine MVP"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fluxa_risk_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
primitive-types = "0.12.2"
# Add amm_core as a dependency to access its types for CPI context
amm_core = { path = "../amm_core", features = ["cpi"] }
