[package]
name = "amm_core"
version = "0.1.0"
description = "AMM Core module with Concentrated Liquidity for Fluxa"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_core"
path = "lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.30.1"
solana-program = "=2.1.0"