[package]
name = "amm_core"
version = "0.1.0"
description = "AMM Core module with Concentrated Liquidity for Fluxa"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_core"
path = "lib.rs"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["metadata"] }
ethereum-types = "0.14.1"