[package]
name = "impermanent_loss"
version = "0.1.0"
description = "Impermanent Loss Mitigation module for Fluxa"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "impermanent_loss"
path = "lib.rs"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["metadata"] }
amm_core = { path = "../amm_core", features = ["cpi"] }
rand = "0.8.5"
rand_distr = "0.4.3"
solana-program = "^2.2.0" # Use compatible version with anchor-spl