[package]
name = "order_book"
version = "0.1.0"
description = "Order Book module for Fluxa"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "order_book"
path = "lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "=2.2.1"
amm_core = { path = "../amm_core", features = ["cpi"] }