[package]
name = "yield_optimization"
version = "0.1.0"
description = "Yield Optimization module for Fluxa"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yield_optimization"
path = "lib.rs"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["metadata"] }
amm_core = { path = "../amm_core" }