[package]
name = "amm_core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.amm_core]
path = "../.."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "q96_arithmetic"
path = "fuzz_targets/q96_arithmetic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "token_amount"
path = "fuzz_targets/token_amount.rs"
test = false
doc = false
bench = false

[[bin]]
name = "swap_step"
path = "fuzz_targets/swap_step.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tick_price"
path = "fuzz_targets/tick_price.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fee_calculation"
path = "fuzz_targets/fee_calculation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "price_conversion"
path = "fuzz_targets/price_conversion.rs"
test = false
doc = false
bench = false

[[bin]]
name = "helper_methods"
path = "fuzz_targets/helper_methods.rs"
test = false
doc = false
bench = false

[[bin]]
name = "price_difference"
path = "fuzz_targets/price_difference.rs"
test = false
doc = false
bench = false
